@@ -13,6 +13,10 @@ Release 0.8.7
 - make zm_href() and zm_secure_href() work in admin pages
 - add simple zm_product_resultlist() admin function for plugins to use
 - rename ZMPlugin::getOrder() to ZMPlugin::getSortOrder() and add setter
+- optimize themeId lookup
+- add support to set the selected (zen-cart) theme id
+- add (default) option in theme builder to automatically create dummy files
+  and select a newly created theme
 
 Release 0.8.6.1
 - fix hardcoded tablename in ZMBanners; #1856664
